fix compatibility on small devices

--- a/style.css
+++ b/style.css
@@ -210,12 +210,22 @@ hr {
     }
 }
 @media (max-width: 750px) {
+    body{
+        background-color: #f1f1f1 !important;
+    }
     .left{
         position: absolute;
     }
     .page{
         grid-template-columns: 1fr;
         grid-template-rows: 1fr;
+    }
+    .page__avatar{
+        width: 150px;
+        height: 150px;
+    }
+    .right > div:nth-child(1){
+        background-color: #e5e3e8 !important;
     }
 }
 .left{
